Fixed header-divider issue on Mobile

--- a/css/main.css
+++ b/css/main.css
@@ -86,11 +86,11 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+/*
 * {
   outline: 1px solid red;
 }
-
+*/
 
 
 html {
@@ -159,7 +159,7 @@ header, footer {
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
-  outline: 1px solid yellow;
+  /*outline: 1px solid yellow;*/
 }
 
 /*------------ Base Header Styles ------------- */
@@ -186,8 +186,9 @@ header figure {
 }
 
 .header-divider {
-  width: 100%;
+  background: #3a3a3a;
   height: 1px;
+  width: 100%;
   margin: 10px 0 20px 0;
 }
 
